register all packages
recreate/recompile

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = .
+develop = . ../../z3c.recipe.i18n
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 parts = lxml
         i18n 
@@ -14,7 +14,20 @@ libxslt-url = http://xmlsoft.org/sources/libxslt-1.1.24.tar.gz
 [i18n]
 recipe = z3c.recipe.i18n:i18n
 eggs = zeit.cms
-packages = ${i18n:eggs}
+packages =
+    zeit.cms
+    zeit.ghost
+    zeit.search
+    zeit.workflow
+    zeit.wysiwyg
+    zeit.xmleditor
+    zeit.content.centerpage
+    zeit.content.gallery
+    zeit.content.image
+    zeit.content.infobox
+    zeit.content.link
+    zeit.content.portraitbox
+    zeit.content.text
 domain = zeit.cms
 output = src/zeit/locales
 zcml =
