added all the packages and fixed translations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = . ../../z3c.recipe.i18n
+develop = .
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 parts = lxml
         i18n 
@@ -13,22 +13,43 @@ libxslt-url = http://xmlsoft.org/sources/libxslt-1.1.24.tar.gz
 
 [i18n]
 recipe = z3c.recipe.i18n:i18n
-eggs = zeit.cms
-packages =
+eggs = 
+    zeit.calendar
     zeit.cms
-    zeit.ghost
-    zeit.search
-    zeit.workflow
-    zeit.wysiwyg
-    zeit.xmleditor
+    zeit.content.article
+    zeit.content.quiz
+    zeit.content.rawxml
+    zeit.content.video
+    zeit.find
+    zeit.imp
+    zeit.securitypolicy
+    zeit.seo
+packages =
+    zeit.calendar
+    zeit.cms
+    zeit.content.article
     zeit.content.centerpage
     zeit.content.gallery
     zeit.content.image
     zeit.content.infobox
     zeit.content.link
     zeit.content.portraitbox
+    zeit.content.quiz
+    zeit.content.rawxml
     zeit.content.text
+    zeit.content.video
+    zeit.find
+    zeit.ghost
+    zeit.imp
+    zeit.search
+    zeit.securitypolicy
+    zeit.seo
+    zeit.workflow
+    zeit.wysiwyg
+    zeit.xmleditor
+
 domain = zeit.cms
+excludeDefaultDomain = true
 output = src/zeit/locales
 zcml =
   <include package="zeit.cms" file="integration.zcml" />
