include zcml files for translations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -52,4 +52,20 @@ domain = zeit.cms
 excludeDefaultDomain = true
 output = src/zeit/locales
 zcml =
-  <include package="zeit.cms" file="integration.zcml" />
+    <include package="zeit.cms" file="integration.zcml" />
+    <include package="zeit.calendar" />
+    <include package="zeit.calendar.browser" />
+    <include package="zeit.content.article" />
+    <include package="zeit.content.article.browser" />
+    <include package="zeit.content.quiz" />
+    <include package="zeit.content.quiz.browser" />
+    <include package="zeit.content.rawxml" />
+    <include package="zeit.content.rawxml.browser" />
+    <include package="zeit.content.video" />
+    <include package="zeit.content.video.browser" />
+    <include package="zeit.find" />
+    <include package="zeit.find.browser" />
+    <include package="zeit.imp" />
+    <include package="zeit.imp.browser" />
+    <include package="zeit.securitypolicy" />
+    <include package="zeit.seo" />
