zeit.content.cp hinzugefügt; übersetzungen

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,7 @@ eggs =
     zeit.calendar
     zeit.cms
     zeit.content.article
+    zeit.content.cp
     zeit.content.quiz
     zeit.content.rawxml
     zeit.content.video
@@ -24,26 +25,19 @@ eggs =
     zeit.imp
     zeit.securitypolicy
     zeit.seo
+
+# Add packages contained in zeit.cms to packages.
 packages =
-    zeit.calendar
-    zeit.cms
-    zeit.content.article
+    ${i18n:eggs}
     zeit.content.centerpage
     zeit.content.gallery
     zeit.content.image
     zeit.content.infobox
     zeit.content.link
     zeit.content.portraitbox
-    zeit.content.quiz
-    zeit.content.rawxml
     zeit.content.text
-    zeit.content.video
-    zeit.find
     zeit.ghost
-    zeit.imp
     zeit.search
-    zeit.securitypolicy
-    zeit.seo
     zeit.workflow
     zeit.wysiwyg
     zeit.xmleditor
@@ -57,6 +51,8 @@ zcml =
     <include package="zeit.calendar.browser" />
     <include package="zeit.content.article" />
     <include package="zeit.content.article.browser" />
+    <include package="zeit.content.cp" />
+    <include package="zeit.content.cp.browser" />
     <include package="zeit.content.quiz" />
     <include package="zeit.content.quiz.browser" />
     <include package="zeit.content.rawxml" />
