--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,9 @@ eggs =
     zeit.cms
     zeit.content.article
     zeit.content.cp
+    zeit.content.gallery
+    zeit.content.infobox
+    zeit.content.portraitbox
     zeit.content.quiz
     zeit.content.rawxml
     zeit.content.video
@@ -25,6 +28,7 @@ eggs =
     zeit.imp
     zeit.securitypolicy
     zeit.seo
+    zeit.wysiwyg
 
 # Add packages contained in zeit.cms to packages.
 packages =
