- ZCML von zeit.content.gallery eingebunden.
- Ue
bersetzungen aktualisiert.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -57,6 +57,8 @@ zcml =
     <include package="zeit.content.article.browser" />
     <include package="zeit.content.cp" />
     <include package="zeit.content.cp.browser" />
+    <include package="zeit.content.gallery.browser" />
+    <include package="zeit.content.gallery" />
     <include package="zeit.content.quiz" />
     <include package="zeit.content.quiz.browser" />
     <include package="zeit.content.rawxml" />
