--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,8 +7,6 @@ parts = lxml
 [lxml]
 recipe = z3c.recipe.staticlxml
 egg = lxml
-libxml2-url = http://xmlsoft.org/sources/libxml2-2.7.2.tar.gz
-libxslt-url = http://xmlsoft.org/sources/libxslt-1.1.24.tar.gz
 
 
 [i18n]
@@ -28,6 +26,7 @@ eggs =
     zeit.imp
     zeit.securitypolicy
     zeit.seo
+    zeit.solr
     zeit.wysiwyg
 
 # Add packages contained in zeit.cms to packages.
@@ -57,8 +56,8 @@ zcml =
     <include package="zeit.content.article.browser" />
     <include package="zeit.content.cp" />
     <include package="zeit.content.cp.browser" />
-    <include package="zeit.content.gallery.browser" />
     <include package="zeit.content.gallery" />
+    <include package="zeit.content.gallery.browser" />
     <include package="zeit.content.quiz" />
     <include package="zeit.content.quiz.browser" />
     <include package="zeit.content.rawxml" />
@@ -71,3 +70,4 @@ zcml =
     <include package="zeit.imp.browser" />
     <include package="zeit.securitypolicy" />
     <include package="zeit.seo" />
+    <include package="zeit.solr" />
