- ZCML von zeit.wysiwyg eingebunden (re #5864).

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -71,3 +71,5 @@ zcml =
     <include package="zeit.securitypolicy" />
     <include package="zeit.seo" />
     <include package="zeit.solr" />
+    <include package="zeit.wysiwyg" />
+    <include package="zeit.wysiwyg.browser" />
