--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,6 +12,7 @@ egg = lxml
 [i18n]
 recipe = z3c.recipe.i18n:i18n
 eggs = 
+    zeit.addcentral
     zeit.calendar
     zeit.cms
     zeit.content.article
@@ -50,6 +51,7 @@ excludeDefaultDomain = true
 output = src/zeit/locales
 zcml =
     <include package="zeit.cms" file="integration.zcml" />
+    <include package="zeit.addcentral" />
     <include package="zeit.calendar" />
     <include package="zeit.calendar.browser" />
     <include package="zeit.content.article" />
