Using ZTK versions and updated tests accordingly (re #6961)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,8 @@
 [buildout]
+extends = versions/versions.cfg
 develop = .
-extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 parts = lxml
         i18n 
-
-[lxml]
-recipe = z3c.recipe.staticlxml
-egg = lxml
 
 
 [i18n]
