--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ parts = lxml
 recipe = z3c.recipe.i18n:i18n
 eggs = 
     zeit.addcentral
+    zeit.brightcove
     zeit.calendar
     zeit.cms
     zeit.content.article
@@ -46,6 +47,7 @@ output = src/zeit/locales
 zcml =
     <include package="zeit.cms" file="integration.zcml" />
     <include package="zeit.addcentral" />
+    <include package="zeit.brightcove" />
     <include package="zeit.calendar" />
     <include package="zeit.calendar.browser" />
     <include package="zeit.content.article" />
