- zeit.content.author hinzugefügt - Übersetzungen aktualisiert

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,7 @@ eggs =
     zeit.calendar
     zeit.cms
     zeit.content.article
+    zeit.content.author
     zeit.content.cp
     zeit.content.gallery
     zeit.content.infobox
