Wire up zeit.magazin

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,7 @@ parts = i18n
 
 [i18n]
 recipe = z3c.recipe.i18n:i18n
-eggs = 
+eggs =
     zeit.addcentral
     zeit.brightcove
     zeit.calendar
@@ -29,6 +29,7 @@ eggs =
     zeit.edit
     zeit.find
     zeit.imp
+    zeit.magazin
     zeit.securitypolicy
     zeit.seo
     zeit.solr
@@ -73,6 +74,8 @@ zcml =
     <include package="zeit.find.browser" />
     <include package="zeit.imp" />
     <include package="zeit.imp.browser" />
+    <include package="zeit.magazin" />
+    <include package="zeit.magazin.browser" />
     <include package="zeit.securitypolicy" />
     <include package="zeit.seo" />
     <include package="zeit.solr" />
