zeit.content.image, .link and .text have their own eggs now

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,10 +21,13 @@ eggs =
     zeit.content.author
     zeit.content.cp
     zeit.content.gallery
+    zeit.content.image
     zeit.content.infobox
+    zeit.content.link
     zeit.content.portraitbox
     zeit.content.quiz
     zeit.content.rawxml
+    zeit.content.text
     zeit.content.video
     zeit.edit
     zeit.find
@@ -40,11 +43,8 @@ eggs =
 packages =
     ${i18n:eggs}
     zeit.content.gallery
-    zeit.content.image
     zeit.content.infobox
-    zeit.content.link
     zeit.content.portraitbox
-    zeit.content.text
     zeit.ghost
     zeit.workflow
     zeit.wysiwyg
@@ -64,10 +64,16 @@ zcml =
     <include package="zeit.content.cp.browser" />
     <include package="zeit.content.gallery" />
     <include package="zeit.content.gallery.browser" />
+    <include package="zeit.content.image" />
+    <include package="zeit.content.image.browser" />
+    <include package="zeit.content.link" />
+    <include package="zeit.content.link.browser" />
     <include package="zeit.content.quiz" />
     <include package="zeit.content.quiz.browser" />
     <include package="zeit.content.rawxml" />
     <include package="zeit.content.rawxml.browser" />
+    <include package="zeit.content.text" />
+    <include package="zeit.content.text.browser" />
     <include package="zeit.content.video" />
     <include package="zeit.content.video.browser" />
     <include package="zeit.find" />
