Re VIV-2: Translate newsletter UI

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,6 +33,7 @@ eggs =
     zeit.find
     zeit.imp
     zeit.magazin
+    zeit.newsletter
     zeit.securitypolicy
     zeit.seo
     zeit.solr
@@ -80,6 +81,8 @@ zcml =
     <include package="zeit.find.browser" />
     <include package="zeit.imp" />
     <include package="zeit.imp.browser" />
+    <include package="zeit.newsletter" />
+    <include package="zeit.newsletter.browser" />
     <include package="zeit.magazin" />
     <include package="zeit.magazin.browser" />
     <include package="zeit.securitypolicy" />
